Finalização da função de validação

--- a/index.html
+++ b/index.html
@@ -25,22 +25,21 @@
         <div>
             <input class="input-carteirinha" type="text" placeholder="Número CNS...">
         </div>
-        <div class="btn-consultar">
-                Consultar
+        <div id="consultar" class="btn-consultar">
+            Consultar
         </div>
 
-        <div class="div-validade">
-            <span class="span-validade">
-                <ion-icon name="checkmark" size="large"></ion-icon> seu CNS é valido!
-                <ion-icon name="close" size="large"></ion-icon> seu CNS é invalido!
-            </span>
+        <div id="div-validade" class="div-validade">
+                dj
         </div>
     </main>
+    <ion-icon name="checkmark" size="large"></ion-icon> seu CNS é valido!
+    <ion-icon name="close" size="large"></ion-icon> seu CNS é invalido!
 
     <script src="assets/script.js"></script>
     <script src="plugins/jquery/script.js"></script>
     <script src="plugins/jQuery-Mask-Plugin-master/dist/jquery.mask.min.js"></script>
-    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>    
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 
     <script>
         $('.input-carteirinha').mask('ZZZZZZZZZZZ  ZZZZ', {
